# rusites-seotool

./: .env.example  .gitignore  Caddyfile  README.md  docker-compose.yml  ofelia.ini
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/: config.py  database.py  main.py  schemas.py
backend/src/api/: __init__.py  media.py  sites.py
backend/src/crud/: analytics.py  metric.py  site.py
backend/src/models/: __init__.py  base.py  media.py  metric.py  site.py  stat.py
backend/src/routes/: __init__.py  internal.py  public.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/favicon/[slug]/: route.ts
frontend/app/dashboard/: data.json  page.tsx
frontend/components/: app-sidebar.tsx  chart-area-interactive.tsx  data-table.tsx  graph.tsx  section-cards.tsx  site-header.tsx  site-search-list.tsx
frontend/components/ui/: dialog.tsx  sidebar.tsx
frontend/lib/: favicon.ts  site-context.tsx
parser/: Dockerfile  GENRES.md  config.py  main.py  media_today.csv  presswatch_data_2026-02-18.csv  pyproject.toml
parser/src/: config.py  icons.py  main.py  seed_metrics.py  timer.py
worker/: db.py  main.py  requirements.txt
