[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "asyncpg>=0.31.0",
    "fastapi>=0.128.6",
    "aiohttp>=3.11.0",
    "pandas>=3.0.1",
    "pandas-stubs>=3.0.0.260204",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.46",
    "uvicorn>=0.40.0",
]

[tool.basedpyright]
extraPaths = ["backend/src"]
reportUnannotatedClassAttribute = "none"
reportUninitializedInstanceVariable = "none"
reportImportCycles = "none"
reportDeprecated = "none"
reportCallInDefaultInitializer = "none"
